[gd_scene load_steps=11 format=3 uid="uid://cfe1nlpcsckit"]

[ext_resource type="Script" path="res://Scenes/Mobs/mob_base.gd" id="1_2unn0"]
[ext_resource type="PackedScene" uid="uid://j0wwf4vv06py" path="res://Scenes/Mobs/mob_engine.tscn" id="2_hbbhh"]
[ext_resource type="PackedScene" uid="uid://b5b8br4bao86w" path="res://skeleton_rogue.tscn" id="3_xoedl"]
[ext_resource type="Script" path="res://Scripts/Characters/behaviors/MobStab.gd" id="4_8aqhn"]
[ext_resource type="PackedScene" path="res://health_bar_3d.tscn" id="4_sx5nv"]
[ext_resource type="Script" path="res://Scripts/Characters/attack.gd" id="5_4cc5y"]
[ext_resource type="Script" path="res://Scripts/Characters/character_sheet.gd" id="5_yod26"]
[ext_resource type="JSON" path="res://data/mob_sheet.json" id="6_cuv6b"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_42h5g"]
height = 2.19767

[sub_resource type="SphereShape3D" id="SphereShape3D_3b7ki"]
radius = 14.084

[node name="MobRogue" type="CharacterBody3D" groups=["mobs"]]
collision_layer = 2
collision_mask = 6
script = ExtResource("1_2unn0")

[node name="Pivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.11214, 0)

[node name="Model" parent="Pivot" instance=ExtResource("3_xoedl")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)

[node name="MobEngine" parent="." instance=ExtResource("2_hbbhh")]

[node name="StabBehavior" type="Node" parent="MobEngine" node_paths=PackedStringArray("attack")]
script = ExtResource("4_8aqhn")
attack = NodePath("CharacterAttack")

[node name="CharacterAttack" type="Node" parent="MobEngine/StabBehavior"]
script = ExtResource("5_4cc5y")
damage = 5.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0113593, 0)
shape = SubResource("CylinderShape3D_42h5g")

[node name="Vision" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.11214, 0)
collision_layer = 0
collision_mask = 9

[node name="CollisionShape3D" type="CollisionShape3D" parent="Vision"]
shape = SubResource("SphereShape3D_3b7ki")

[node name="HealthBar3D" parent="." instance=ExtResource("4_sx5nv")]
transform = Transform3D(1, 0, 0, 0, 0.3, 0, 0, 0, 1, 0, 2.19046, 0)

[node name="CharacterSheet" type="Node" parent="."]
script = ExtResource("5_yod26")
sheet_data = ExtResource("6_cuv6b")
